Cookie small screen visibility fix and margin left in footer

--- a/assets/css/cookiepopup.css
+++ b/assets/css/cookiepopup.css
@@ -1,5 +1,4 @@
 @keyframes fadeIn {
-
     from {
         opacity: 0;
         transform: translateY(10px);
@@ -8,11 +7,9 @@
         opacity: 1;
         transform: translateY(0);
     }
-
 }
 
 @keyframes fadeOut {
-
     from {
         opacity: 1;
         transform: translateY(0);
@@ -21,11 +18,9 @@
         opacity: 0;
         transform: translateY(10px);
     }
-    
 }
 
 .cookie-consent {
-
     display: none;
     position: fixed; 
     bottom: 5px; 
@@ -44,22 +39,18 @@
     animation: fadeIn 0.5s ease-out forwards;
 }
 
-
-
 .cookie-consent.show {
     display: block;
     animation: fadeIn 0.5s ease-out forwards; 
 }
 
-
 .cookie-consent.hide {
     animation: fadeOut 0.5s ease-in forwards;
 }
 
-h4 {
+.cookie-consent h4 {
     color: #175394;
 }
-
 
 .cookie-consent p {
     margin: 10px 0px;
@@ -67,16 +58,15 @@ h4 {
     color: #686868;
 }
 
-
 .cookie-consent a {
     color: #0a70d5;
     text-decoration: underline;
     transition: all 0.3s ease;
 }
+
 .cookie-consent a:hover {
     color: #003169; 
 }
-
 
 .cookie-consent button {
     background-color: #0056b3; 
@@ -91,7 +81,18 @@ h4 {
     margin-bottom: 5px;
 }
 
-
 .cookie-consent button:hover {
     background-color: #003169; 
+}
+
+@media (max-width: 1400px) {
+    .cookie-consent {
+        position: fixed; 
+        bottom: 0; 
+        left: 0; 
+        width: 100%; 
+        height: auto; 
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+        border-radius: 0;
+    }
 }
